# local-bento

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  bento_config.toml  docker-compose.yml  guest.elf  run_bento.sh  run_bento_dev.sh
config/: config.yaml
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/tasks/: db.rs  mod.rs  types.rs
crates/bento-client/: Cargo.toml
crates/bento-client/src/: bento_cli.rs  simple_cli.rs
crates/grpc-client/: Cargo.toml  build.rs
crates/grpc-client/src/: client.rs  lib.rs
crates/grpc-client/tests/: e2e.rs  test.rs
crates/sample-guest/methods/guest/: Cargo.toml
crates/taskdb/: Cargo.toml
crates/taskdb/benches/: taskdb.rs
crates/taskdb/examples/: stress.rs
crates/taskdb/migrations/: 1_taskdb.sql
crates/taskdb/src/: lib.rs
crates/taskdb/tests/: e2e.rs
crates/workflow/: Cargo.toml
crates/workflow-common/src/: s3.rs
crates/workflow/src/: lib.rs  redis.rs
crates/workflow/src/tasks/: executor.rs  mod.rs
example/host/: Cargo.toml
example/host/src/: main.rs
example/methods/guest/: Cargo.toml
example/methods/guest/src/: main.rs
guest/: Cargo.toml  main.rs
guest/src/: lib.rs
migrations/: 20240409000000_init.sql
proofs/: d12fba0b-3381-4887-bcdf-88f09a3f3281_session_info.json
proto/: README.md
proto/bento/v1/: bento_task_service.proto
prover/: Cargo.toml
prover/examples/: submit_task.rs
prover/src/: main.rs
prover/src/gpu/: coordinator.rs  mod.rs  worker.rs
prover/src/service/: mod.rs  prover.rs
scripts/: build.sh  init_db.sh  run_bento.sh  run_grpc.sh
