[workspace]
members = [
    "core",
    "prover",
    "guest"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
risc0-zkvm = { version = "0.20", features = ["prove"] }
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
serde = { version = "1.0", features = ["derive"] }