[workspace]
resolver = "2"
members = [
    "crates/taskdb",
    "crates/grpc-client",
    "crates/workflow",
    "crates/workflow-common"
]

[workspace.package]
version = "0.7.0"
edition = "2021"
homepage = "https://beboundless.xyz/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace.dependencies]
rand = "0.9.1"
anyhow = { version = "1.0" }
criterion = { version = "0.6.0", features = ["async_tokio"] }
aws-sdk-s3 = "1.96.0" # used for minio for max compatibility
bincode = "1.3"
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }
bytemuck = "1.23.0"
clap = { version = "4.5", features = ["derive", "env"] }
deadpool-redis = "0.21.1"
signal-hook = "0.3"
nix = { version = "0.30.0", features = ["fs"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
redis = { version = "0.31.0", features = ["tokio-comp"] }
risc0-build = "2.1.2"
risc0-zkvm = { version = "2.1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false }
taskdb = { path = "crates/taskdb" }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
nvml-wrapper = "0.11.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
tonic-build = "0.13.1"
futures-core = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
grpc-client = { path = "crates/grpc-client" }
workflow = { path = "crates/workflow" }
workflow-common = { path = "crates/workflow-common" }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# Possibly faster runtime config:
# [build]
# rustflags = ["-Ctarget-cpu=native", "-C lto"]