[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.13"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
bytes = "1.4"

# Local dependencies
workflow-common = { path = "../workflow-common" }

[build-dependencies]
tonic-build = "0.9"
