[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client for Bento Task Service"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
uuid.workspace = true
futures = "0.3.31"
anyhow.workspace = true
thiserror.workspace = true
tonic-build = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
