[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client for Bento Task Service"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid.workspace = true
futures = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
tonic-build = { workspace = true }
futures-core = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
